--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primera Pre-Entrega</title>
+    <title>Segunda Pre-Entrega</title>
 </head>
 
 <body>
 
-    <h1>Primera pre-entrega Espinoza Orozco Fabio Alan</h1>
+    <h1>Segunda pre-entrega Espinoza Orozco Fabio Alan</h1>
     <script src="./main.js"></script>
 </body>
 
