--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1>Segunda pre-entrega Espinoza Orozco Fabio Alan</h1>
+    <h1 class="display-3">Segunda pre-entrega Espinoza Orozco Fabio Alan</h1>
     
     <script src="./main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
